--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,8 @@
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-
 
 body {
   background: #0c0d0e;
@@ -15,30 +12,28 @@ body {
   background: linear-gradient(to right, #515059, #0c0d0e);
   font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
+  -moz-osx-font-smoothing: grayscale;
   color: white;
 }
 
+.wrapper {
+  max-width: 1570px;
+  margin-left: auto;
+  margin-right: auto;
 
-
-.wrapper{
-    max-width: 1570px;
-    margin-left: auto;
-    margin-right: auto;
-
-    display: grid;
-    grid-gap: 7px;
-    grid-template-columns: 200px repeat(8, 1fr);
-    grid-template-rows: 40px 40px repeat(5, 120px);
-	box-shadow: 0 0 20px black;
-	/* opacity: 0.92; */
+  display: grid;
+  grid-gap: 7px;
+  grid-template-columns: 200px repeat(8, 1fr);
+  grid-template-rows: 40px 40px repeat(5, 120px);
+  box-shadow: 0 0 20px black;
+  /* opacity: 0.92; */
 }
 
 @media (max-width: 600px) {
-  body { 
-	background: red; 
+  body {
+    background: red;
   }
-  .wrapper{
+  .wrapper {
     grid-gap: 2px;
     grid-template-columns: repeat(9, 1fr);
     font-family: 'Raleway', sans-serif;
@@ -46,156 +41,147 @@ body {
   }
 }
 
-
-
-
-.logo{
-    background-color: #0D0B27;
-	color: white;
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;
-    padding: 10px;
-    font-family: 'Raleway', sans-serif;
-	box-shadow: 0 0 20px black;
+.logo {
+  background-color: #0d0b27;
+  color: white;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  padding: 10px;
+  font-family: 'Raleway', sans-serif;
+  box-shadow: 0 0 20px black;
 }
 
+.menu {
+  background-color: #0d0b27;
+  font-family: 'Raleway', sans-serif;
+  font-size: 12px;
 
-
-
-
-.menu{
-    background-color: #0D0B27;
-    font-family: 'Raleway', sans-serif;
-    font-size: 12px;
-
-    /* -1 means it will take all the available space  */
-    grid-column: 5 / -1;
-	box-shadow: 0 0 20px black;
-	overflow: hidden;
-    text-overflow: ellipsis;
+  /* -1 means it will take all the available space  */
+  grid-column: 5 / -1;
+  box-shadow: 0 0 20px black;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-.menu-list{
-    list-style: none;
-    display: flex;
+.menu-list {
+  list-style: none;
+  display: flex;
 }
 
-.menu-list_item{
-    flex-grow: 1;
+.menu-list_item {
+  flex-grow: 1;
 }
 
-.menu-list_link{
-    display: block;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: whitesmoke;
+.menu-list_link {
+  display: block;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: whitesmoke;
 }
 
-.menu-list_link:hover{
-    background-color: #512212;
+.menu-list_link:hover {
+  background-color: #512212;
 }
 @media (max-width: 600px) {
-  .menu{
+  .menu {
     grid-column: 2 / -1;
   }
 }
 
-
-.breadcrumb{
-    background-color: #0D0B27;
-	/* color: white; */
-    font-family: 'Raleway', sans-serif;
-    font-size: 12px;
-    grid-row: 2;
-    /* -1 means it will take all the available space  */
-    grid-column: 2 / -1;
-	overflow: hidden;
-    /* text-overflow: ellipsis; */
+.breadcrumb {
+  background-color: #0d0b27;
+  /* color: white; */
+  font-family: 'Raleway', sans-serif;
+  font-size: 12px;
+  grid-row: 2;
+  /* -1 means it will take all the available space  */
+  grid-column: 2 / -1;
+  overflow: hidden;
+  /* text-overflow: ellipsis; */
 }
 
 .breadcrumb-list {
-    margin: 10px 10px 10px 25px;
-    list-style: none;
-    display: block;
-	white-space: nowrap;
-	overflow: hidden;
-    /* text-overflow: ellipsis; */
+  margin: 10px 10px 10px 25px;
+  list-style: none;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  /* text-overflow: ellipsis; */
 }
 
 .breadcrumb-list_item {
-    display: inline-block;
-    *display: inline;
+  display: inline-block;
+  *display: inline;
 }
 
-.breadcrumb-list_link{
-    display: inline;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
+.breadcrumb-list_link {
+  display: inline;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 a:visited {
-    color: orange;
+  color: orange;
 }
 
 a:link {
-    color: white;
+  color: white;
 }
 
 a:hover {
-    color: wheat;
+  color: wheat;
 }
 
 .sidebar-left {
-    font-family: 'Raleway', sans-serif;
-    font-size: 14px;
-    background-color: #0D0B27;
-    grid-row: 3 / 20;
-    grid-column: 1;
-    display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-    align-items: center;
+  font-family: 'Raleway', sans-serif;
+  font-size: 14px;
+  background-color: #0d0b27;
+  grid-row: 3 / 20;
+  grid-column: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-.hero-text{
-    background-color: #f90;
-    grid-row: 3 / 7;
-    grid-column: 2 / 10;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items:center;
+.hero-text {
+  background-color: #f90;
+  grid-row: 3 / 7;
+  grid-column: 2 / 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 @media (max-width: 600px) {
-  .sidebar-left { 
-    grid-row: 7 / 10 ;
+  .sidebar-left {
+    grid-row: 7 / 10;
     grid-column: 1 / 10;
-	flex-direction: column;
+    flex-direction: column;
   }
 }
 @media (max-width: 600px) {
-  .hero-text { 
+  .hero-text {
     grid-column: 1 / 10;
   }
 }
-
 
 .login-page {
   width: 320px;
   margin: auto;
 }
 @media (max-width: 600px) {
-  .login-page { 
-	width: auto;
+  .login-page {
+    width: auto;
   }
 }
 .form {
   /* position: relative; */
   /* z-index: 1; */
-  background: #FFFFFF;
+  background: #ffffff;
   max-width: 360px;
   margin: 0 auto 100px;
   padding: 45px;
@@ -203,7 +189,7 @@ a:hover {
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .form input {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   outline: 0;
   background: #f2f2f2;
   width: 100%;
@@ -214,20 +200,22 @@ a:hover {
   font-size: 14px;
 }
 .form button {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
   outline: 0;
   background: #0c0d0e;
   width: 100%;
   border: 0;
   padding: 15px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 14px;
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
 }
-.form button:hover,.form button:active,.form button:focus {
+.form button:hover,
+.form button:active,
+.form button:focus {
   background: #512212;
 }
 .form .message {
@@ -248,81 +236,78 @@ a:hover {
   display: content;
 }
 
-
-.container{
-    display: flex;
-    align-items: center;
-    grid-column: 3 / 9;
+.container {
+  display: flex;
+  align-items: center;
+  grid-column: 3 / 9;
 }
 
-.container-one{
-    grid-row: 7 / 10;
-	overflow: hidden;
+.container-one {
+  grid-row: 7 / 10;
+  overflow: hidden;
 }
 
-.container-two{
-    grid-row: 11;
-	overflow: hidden;
+.container-two {
+  grid-row: 11;
+  overflow: hidden;
 }
 
-.container-three{
-    grid-row: 12;
-	overflow: hidden;
+.container-three {
+  grid-row: 12;
+  overflow: hidden;
 }
 
-.container-text{
-    padding: 16px 32px;
+.container-text {
+  padding: 16px 32px;
 }
 
 @media (max-width: 600px) {
-  .container-one { 
-    grid-row: 12 / 14 ;
+  .container-one {
+    grid-row: 12 / 14;
     grid-column: 1 / 10;
-	flex-direction: column;
-	overflow: hidden;
+    flex-direction: column;
+    overflow: hidden;
   }
 }
 
 @media (max-width: 600px) {
-  .container-two { 
-    grid-row: 15 ;
+  .container-two {
+    grid-row: 15;
     grid-column: 1 / 10;
-	flex-direction: column;
-	overflow: hidden;
+    flex-direction: column;
+    overflow: hidden;
   }
 }
 
 @media (max-width: 600px) {
-  .container-three { 
-    grid-row: 16 ;
+  .container-three {
+    grid-row: 16;
     grid-column: 1 / 10;
-	flex-direction: column;
-	overflow: hidden;
+    flex-direction: column;
+    overflow: hidden;
   }
 }
 
 #list h4 {
-    font-size: 14px;
-    margin: inherit;
-	padding: inherit;
+  font-size: 14px;
+  margin: inherit;
+  padding: inherit;
 }
 #list ul {
-    margin: inherit;
-	padding: 10px 0px 10px 8px;
-    list-style: none;
+  margin: inherit;
+  padding: 10px 0px 10px 8px;
+  list-style: none;
 }
 
-
-
-.footer{
-    margin-top: 2px;
-    display: flex;
-    align-items: center;
-    text-align: center;
+.footer {
+  margin-top: 2px;
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
 
-.footer-item{
-    flex-grow: 1;
-    padding: 32px 0;
-    background-color: #f90;
+.footer-item {
+  flex-grow: 1;
+  padding: 32px 0;
+  background-color: #f90;
 }
